[tool.poetry]
authors = ["Karl Kroening <karlk@kralnet.us>"]
description = ""
name = "ultralight-cffi"
packages = [{include = "ultralight_cffi"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
cffi = "^1.17.1"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
ipython = "^8"
isort = {extras = ["colors"], version = "^5"}
mock = "^5"
mypy = "^1"
pylint = "^3"
pytest = "^8"
pytest-asyncio = "^0"
pytest-faker = "^2"
pytest-mock = "^3"
pytest-only = "^2"
pytest-randomly = "^3"
pytest-timeout = "^2"
pytest-xdist = "^3"
types-mock = "^5"
types-pygments = "^2"
types-tensorflow = "^2"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '^/(ultralight_cffi|tests)/.*\.pyi?$'
exclude = '^/ultralight_cffi/_cffi.py$'  # TBD
skip-string-normalization = true
target_version = ['py311']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = true
ignore_whitespace = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
no_sections = true
use_parentheses = true

[tool.mypy]
extra_checks = true
files = 'ultralight_cffi'
mypy_path = 'stubs'
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = 'ultralight_cffi.*'
strict = true
extra_checks = true

[[tool.mypy.overrides]]
module = 'ultralight_cffi.*'
# check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = '--pdbcls=IPython.terminal.debugger:Pdb'
asyncio_default_fixture_loop_scope = 'function'
filterwarnings = [
    "error::pytest.PytestUnhandledCoroutineWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
    "error::RuntimeWarning",
]
asyncio_mode = 'auto'
markers = []
timeout = 5
